--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.19.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "organ": "^0.0.0"
   }
 }
