--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand  --config jest.config.js",
+    "seed:admin": "node --experimental-modules scripts/seed_admin.js"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "extensionsToTreatAsEsm": [
+      ".js"
+    ],
+    "transform": {}
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -20,10 +28,22 @@
     "express-rate-limit": "^8.1.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb-memory-server": "^10.2.2",
     "mongoose": "^8.19.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^7.0.7",
     "nodemon": "^3.1.10",
-    "organ": "^0.0.0"
+    "organ": "^0.0.0",
+    "supertest": "^7.1.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "ts-jest": "^29.4.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "@babel/preset-env": "^7.28.3",
+    "babel-jest": "^29.7.0"
   }
 }
